[gd_scene load_steps=18 format=3 uid="uid://5txubyrrc52c"]

[ext_resource type="Script" path="res://ui/level_up_ui.gd" id="1_a8xin"]
[ext_resource type="Texture2D" uid="uid://cm2pebd7hjgts" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="2_sk6xx"]
[ext_resource type="Texture2D" uid="uid://bfl0nawrd2oqp" path="res://addons/Tiny Swords/UI/Banners/Banner_Vertical.png" id="3_erras"]
[ext_resource type="Texture2D" uid="uid://chc3qx3hgpae0" path="res://addons/Tiny Swords/UI/Buttons/Button_Blue.png" id="4_ppcub"]
[ext_resource type="Texture2D" uid="uid://dq8frci2nfyr7" path="res://addons/Tiny Swords/UI/Buttons/Button_Hover.png" id="5_mr1re"]
[ext_resource type="Texture2D" uid="uid://divxeb51qhg7b" path="res://addons/Tiny Swords/UI/Buttons/Button_Blue_Pressed.png" id="6_vkknk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rqm8t"]
texture = ExtResource("2_sk6xx")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_g0leb"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_pnykj"]
line_spacing = 20.0
font = SubResource("SystemFont_g0leb")
font_size = 34
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sr32m"]
texture = ExtResource("3_erras")
texture_margin_left = 32.0
texture_margin_top = 96.0
texture_margin_right = 32.0
texture_margin_bottom = 96.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 1
region_rect = Rect2(32, 32, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_7igl5"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_nu4np"]
font = SubResource("SystemFont_7igl5")
font_size = 27
font_color = Color(0, 0, 0, 0.870588)
outline_size = 3

[sub_resource type="SystemFont" id="SystemFont_77o8u"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akxob"]
texture = ExtResource("4_ppcub")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
modulate_color = Color(0.552758, 0.706428, 0.739645, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahawt"]
texture = ExtResource("5_mr1re")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lwxnt"]
texture = ExtResource("6_vkknk")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vaffs"]
texture = ExtResource("5_mr1re")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[node name="LevelUpUi" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a8xin")
button_list = Array[NodePath]([NodePath("Panel/Armor"), NodePath("Panel/Speed"), NodePath("Panel/Str"), NodePath("Panel/Ritual"), NodePath("Panel/FlameCut"), NodePath("Panel/Magic"), NodePath("Panel/Health"), NodePath("Panel/WarriosMight"), NodePath("Panel/Charge"), NodePath("Panel/EthernalShild")])
button_positions = Array[Vector2]([Vector2(71.5, 79), Vector2(71.5, 159), Vector2(71.5, 239)])

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -283.5
offset_right = 139.0
offset_bottom = -190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rqm8t")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -31.5
offset_right = 58.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "LEVEL UP"
label_settings = SubResource("LabelSettings_pnykj")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -170.0
offset_right = 196.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sr32m")

[node name="Results" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -154.0
offset_right = 143.5
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
text = "STATS AND SKILLS TO UP:"
label_settings = SubResource("LabelSettings_nu4np")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Armor" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -96.5
offset_right = 125.5
offset_bottom = -26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "ARMOR"

[node name="Speed" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -16.5
offset_right = 125.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "SPEED"

[node name="Str" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 63.5
offset_right = 125.5
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "STRENGHT"

[node name="Ritual" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -149.5
offset_right = -250.5
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "RITUAL"

[node name="FlameCut" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -16.5
offset_right = -250.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "FLAME CUT"

[node name="Magic" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = 108.5
offset_right = -250.5
offset_bottom = 178.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "MAGIC"

[node name="Health" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 234.5
offset_top = 133.5
offset_right = 484.5
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "HEALTH"

[node name="WarriosMight" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 234.5
offset_top = 16.5
offset_right = 484.5
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "WARRIO'S MIGHT"

[node name="Charge" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 234.5
offset_top = -96.5
offset_right = 484.5
offset_bottom = -26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "CHARGE"

[node name="EthernalShild" type="Button" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 234.5
offset_top = -195.5
offset_right = 484.5
offset_bottom = -125.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_77o8u")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_akxob")
theme_override_styles/hover = SubResource("StyleBoxTexture_ahawt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lwxnt")
theme_override_styles/focus = SubResource("StyleBoxTexture_vaffs")
text = "ETHERNAL SHILD"

[connection signal="mouse_entered" from="Panel/Armor" to="." method="_on_armor_mouse_entered"]
[connection signal="pressed" from="Panel/Armor" to="." method="_on_armor_pressed"]
[connection signal="mouse_entered" from="Panel/Speed" to="." method="_on_speed_mouse_entered"]
[connection signal="pressed" from="Panel/Speed" to="." method="_on_speed_pressed"]
[connection signal="mouse_entered" from="Panel/Str" to="." method="_on_str_mouse_entered"]
[connection signal="pressed" from="Panel/Str" to="." method="_on_str_pressed"]
[connection signal="mouse_entered" from="Panel/Ritual" to="." method="_on_ritual_mouse_entered"]
[connection signal="pressed" from="Panel/Ritual" to="." method="_on_ritual_pressed"]
[connection signal="mouse_entered" from="Panel/FlameCut" to="." method="_on_flame_cut_mouse_entered"]
[connection signal="pressed" from="Panel/FlameCut" to="." method="_on_flame_cut_pressed"]
[connection signal="mouse_entered" from="Panel/Magic" to="." method="_on_magic_mouse_entered"]
[connection signal="pressed" from="Panel/Magic" to="." method="_on_magic_pressed"]
[connection signal="mouse_entered" from="Panel/Health" to="." method="_on_health_mouse_entered"]
[connection signal="pressed" from="Panel/Health" to="." method="_on_health_pressed"]
[connection signal="mouse_entered" from="Panel/WarriosMight" to="." method="_on_warrios_might_mouse_entered"]
[connection signal="pressed" from="Panel/WarriosMight" to="." method="_on_warrios_might_pressed"]
[connection signal="mouse_entered" from="Panel/Charge" to="." method="_on_charge_mouse_entered"]
[connection signal="pressed" from="Panel/Charge" to="." method="_on_charge_pressed"]
[connection signal="mouse_entered" from="Panel/EthernalShild" to="." method="_on_ethernal_shild_mouse_entered"]
[connection signal="pressed" from="Panel/EthernalShild" to="." method="_on_ethernal_shild_pressed"]
